--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h1>Enyokitchenette</h1>
         </div>
         <ul class="menu-list">
-          <li><a href="">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="">Menus</a></li>
           <li><a href="">Services</a></li>
           <li><a href="">Contact Us</a></li>
@@ -84,13 +84,7 @@
       </section>
     </div>
 
-    <script>
-      const menuToggle = document.querySelector(".menu-toggle input");
-      const nav = document.querySelector("nav ul");
-
-      menuToggle.addEventListener("click", () => {
-        nav.classList.toggle("slide");
-      });
-    </script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
   </body>
 </html>
