--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nabla&family=Rubik:wght@300;400&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="container">
@@ -40,8 +40,8 @@
         </div>
         <ul class="menu-list">
           <li><a href="index.html">Home</a></li>
-          <li><a href="">Menus</a></li>
-          <li><a href="">Services</a></li>
+          <li><a href="">Menu</a></li>
+          <li><a href="">Service</a></li>
           <li><a href="">Contact Us</a></li>
         </ul>
       </nav>
@@ -84,7 +84,18 @@
       </section>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <section class="menus">
+      <h2 class="menus-title">Menus</h2>
+      <div class="menus-img">
+        <img src="img/gallery/salad.jpg" alt="" />
+      </div>
+      <div class="menus-desc">
+        <h4>Sladada</h4>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita reiciendis quis deleniti sunt repudiandae! Dolore quod laborum beatae suscipit, odit eum. Suscipit corrupti eaque magni accusantium explicabo non aspernatur ex.
+      </div>
+    </section>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
